# qem-bot

./: .containerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitlint  .mergify.yml  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  Containerfile  LICENSE  Makefile  Podmanfile.dev  Readme.md  aggregate2qem.py  bot-ng.py  codecov.yml  incapprove.py  incidents2qem.py  pc_helper_online.py  pylintrc  pyproject.toml  qem-bot.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  singlearch.yml  smelt2qem.py  test_output_feature_021_B_decouple_io_from_constructors.md.txt  test_output_feature_033_improve_code_quality_remove_all_staticmethods.txt  test_output_feature_037_update_commands.txt
.github/: CODEOWNERS  checklist.yml  dependabot.yml
.github/workflows/: checklist.yml  ci.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/tracks/fix_cli_config_regression_20260302/: index.md  metadata.json  plan.md  spec.md
containers/systemd/: qem-bot-gitea-sync.container  qem-bot.build
doc/: config.md  containers.md  development.md  usage.md
openqabot/: __init__.py  aggrsync.py  amqp.py  approver.py  args.py  commenter.py  config.py  dashboard.py  errors.py  giteasync.py  giteatrigger.py  incrementapprover.py  incsyncres.py  main.py  missing_vars.txt  mock_interceptor.py  openqa.py  openqabot.py  pc_helper.py  repodiff.py  requests.py  smeltsync.py  subsyncres.py  syncres.py  utc.py  utils.py
openqabot/loader/: __init__.py  amqp_listener.py  buildinfo.py  config.py  crawler.py  gitea.py  gitea_utils.py  incrementconfig.py  qem.py  repohash.py  smelt.py  sourcereport.py  triggerconfig.py
openqabot/osclib/: __init__.py  comments.py
openqabot/types/: __init__.py  aggregate.py  baseconf.py  gitea.py  incident.py  incidents.py  increment.py  isomatch.py  pullrequest.py  submission.py  submissions.py  types.py
responses/: OBS:PROJECT:PUBLISH-primary.xml.zst  OBS:PROJECT:TEST-primary.xml  build-results-124-SUSE:SLFO:1.1.99:PullRequest:124:SLES.xml  foo-primary.xml  patch-info.xml  pulls.json  repodata-listing-OBS:PROJECT.json  repodata-listing-OBS:PROJECT:PUBLISH_product_zst.json  repodata-listing-foo.json  reviews-124.json  source-report-SUSE:Products:SLE-Product-SLES:16.0.xml  source-report-SUSE:Products:SLE-Product-SLES:16.0:TEST.xml  test-product-repo.json
scripts/: check_conventions.py  cleanup_phantom_schedules.py  manage_dashboard.py  update_readme.py
tests/: __init__.py  conftest.py  helpers.py  test_aggregate.py  test_aggrsync.py  test_amqp.py  test_amqp_listener.py  test_approve.py  test_approve_git.py  test_approve_helpers.py  test_approve_obs.py  test_approve_scenarios.py  test_approve_unblock.py  test_args.py  test_baseconf.py  test_commenter.py  test_config.py  test_coverage_loader_config.py  test_crawler.py  test_dashboard.py  test_giteasync.py  test_giteatrigger.py  test_incident.py  test_incidents.py  test_increment_types.py  test_incrementapprover.py  test_incrementapprover_build_info.py  test_incrementapprover_diff.py  test_incrementapprover_helpers.py  test_incrementapprover_obs.py  test_incrementapprover_scenarios.py  test_incrementapprover_two_products.py  test_incsyncres.py  test_loader_config.py  test_loader_gitea.py  test_loader_gitea_archs.py  test_loader_gitea_build_results.py  test_loader_gitea_helpers.py  test_loader_gitea_prs.py  test_loader_gitea_submissions.py  (+29 more)
tests/fixtures/: __init__.py  qembot_mocks.py  submissions.py
tests/fixtures/ambiguos/: ambiguos1.yaml  ambiguos2.yaml
tests/fixtures/config/: 01_single.yml  02_no_product.yml  03_no_test_issues.yml  05_normal.yml
tests/fixtures/config-concat/: 01_normal.yaml
tests/fixtures/config-increment-approver/: increment-definitions.yaml
tests/fixtures/gitea/: amqp-autogits_workflow_pr_bot-pull_request_review_approved-20251006-154156.json  pull_request_review_requested_without_qam-openqa-review.json
tests/fixtures/metadata/qem-bot/: minimal.yml  singlearch.yml  sles.yml
tests/fixtures/responses/: _multibuild-124-SUSE:SLFO:1.1.99:PullRequest:124:SLES.xml  build-results-124-SUSE:SLFO:1.1.99:PullRequest:124.xml  build-results-124-SUSE:SLFO:1.1.99:PullRequest:124:SLES.xml  comments-124.json  empty-build-results.xml  files-124.json  pulls.json  repodata-listing-OBS:PROJECT:TEST_product_gz.json  repodata-listing-http___download.suse.de_ibs_OBS__PROJECT__PUBLISH_product.json  repodata-listing-http___download.suse.de_ibs_OBS__PROJECT__TEST_product.json
